syntax = "proto3";

import "base.proto";

service CentralBuildingService {
    rpc ListenCreation (Empty) returns (stream CentralBuildingState);
    rpc ListenState(ID) returns (stream CentralBuildingState);

    rpc CancelOredr(CancelQueuedRequest) returns (Empty);

    rpc QueueWorker(QueueWorkerRequest) returns (QueueWorkerResult);
    rpc SetWaypoint(SetWaypointRequest) returns (Empty);
}

message QueueWorkerRequest {
    QueueUnitRequest Base = 1;
}

message QueueWorkerResult {
    QueueUnitResult Base = 1;
}

message CentralBuildingState {
    FactoryBuildingState Base = 1;
}